...
    <!--******************************************************************************-->
    <!--                                 INCIDENCIAS                                  -->
    <!--******************************************************************************-->
    <!-- ============================ MESSAGES ============================== -->
    <string name="no_incidencia_to_show">No hay incidencias que mostrar</string>
    <string name="incidencia_not_registered">Intenta nuevamente registrar la incidencia.</string>
    <string name="incidencia_wrong_init">Verifica que sigue abierta la incidencia.
    </string>
    <string name="resolucion_duplicada">Ya existe resolución para esta incidencia</string>
    <string name="user_without_powers">Haz login y accede nuevamente a la incidencia.</string>
    <!-- ====================== Google Cloud Messages ====================== -->
    <string name="incid_id_notification_channel">INCIDENCIAS</string>
    <string name="incid_desc_notification_channel">Dídekin: incidencias comunidad</string>
...
    <string name="incid_resolucion_avance_rot">Nueva información</string>
    <string name="incid_resolucion_modif_button_rot">Modificar</string>
    <string name="incid_resolucion_close_button_rot">Modificar y cerrar</string>
    <string name="incid_resolucion_plan_rot">Plan:</string>
    <string name="incid_resolucion_avance_hint">-- avance o cambio en el plan --</string>
    <string name="incid_resolucion_avances_rot">Historial de avances:</string>
    <string name="incid_resolucion_no_avances_message">No hay avances registrados</string>
    <!-- ======== IncidResolucionRegFr ========= -->
    <string name="incid_resolution_ac_label">Resolución incidencia</string>
    <string name="incid_resolucion_descrip_msg">Descripción</string>
    <string name="incid_resolucion_fecha_prev">Fecha estimada:</string>
    <string name="incid_resolucion_fecha_prev_msg">Fecha resolución</string>
    <string name="incid_resolucion_fecha_default_txt">>> Elige una fecha</string>
...
